--- a/src/components/TableRow/TableTow.module.scss
+++ b/src/components/TableRow/TableTow.module.scss
@@ -15,6 +15,12 @@
             opacity: 1;
         }
     }
+
+    div {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        padding: 0px 5px;
+    }
 }
 
 .row__title {
@@ -23,12 +29,17 @@
 
 .row__delete {
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
+    padding: 5px;
+    background-color: var(--gray);
+    border-radius: 50%;
     background-image: url(../../assets/icons/trash.svg);
+    background-size: 20px 20px;
+    background-repeat: no-repeat;
+    background-position: center center;
     right: 20px;
     top: calc(50% - 10px);
     opacity: 0;
     transition: .3s;
-    background-color: transparent;
 }
