--- a/src/UI/DropdownMenu/DropdownMenu.module.scss
+++ b/src/UI/DropdownMenu/DropdownMenu.module.scss
@@ -20,6 +20,7 @@
     width: 100%;
     max-height: 150px;
     overflow-y: scroll;
+    z-index: 1;
     &::-webkit-scrollbar {
         width: 5px;
         background-color: var(--dark-orange);
